# HUE_Bench

./: .gitignore  README.md  pyproject.toml
Config/: config.yaml  ours.yaml
Config/prompt_template/: 4_choice_template.json  4_choice_template_5_shot.json  5_choice_template_over_time.json
bash_scripts/: analyse_result.sh  mcq_exp.sh  mcq_exp_ours.sh  over_time_exp.sh  statistics.sh
scripts/: clip_embedding.py  generate_questions.py
scripts/analysis/: analyse_embedding_distance.py  analyse_options.py  analyse_result.py  analyse_text_acc.py  plot_histogram.py  text_statistics.py
scripts/dataset/: analyze_artist_similarity.py  artist_pair_exp.py  artist_ranking_exp.py  artist_sample_count.py  comic_text.py  construct_2025.py  construct_overtime.py  construct_style.py  construct_style_same_artist.py  dataset_clean.py  dataset_ranking_pair.py  merge_csv.py
scripts/experiment/: clip_experiment.py  easy_mode.py  mcq_exp.py  mcq_style_exp.py  new_mcq.py  over_time_mcq.py
scripts/method/: method.py
utils/: base64_encoder.py  bert.py  clip.py  close_source.py  collect_data.py  config_loader.py  get_description.py  llm_call.py  merge_csv.py  open_clip.py  parse_date.py  parse_jsonString.py  sbert.py  siglip.py  test_api.py
